Fix index.html and quickstarts.
Bug: Menu wrap in navbar not responsive.

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ figure {
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover {
-    heifght: inherit;
+    height: inherit;
     padding: 3em 0;
   }
 }
@@ -132,7 +132,7 @@ figure {
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover.fh5co-cover_2 {
-    heifght: inherit;
+    height: inherit;
     padding: 3em 0;
   }
 }
@@ -1119,6 +1119,7 @@ figure {
 
 .js .animate-box {
   opacity: 0;
+  overflow: hidden;
 }
 
 #fh5co-wrapper {
@@ -1391,9 +1392,8 @@ figure {
 }
 
 .search-field {
-	width: 472px;
+
 	align-content: left;
-	display: inline-block;
 	background-color: #ffffff;
 	color:rgb(0,0,0);
 	border-radius: 8px;
@@ -1498,7 +1498,7 @@ button.gsc-search-button
 
 .index-scroll-icon img {
 	max-width: 70px;
-  margin-left: 36%;
+  margin-left: 50%;
   margin-right: auto;
 	margin-top: -40px;
 }
